Add CASSANDRA_CGROUP_MEMORY_LIMIT env var